--- a/src/gallery.html
+++ b/src/gallery.html
@@ -4,22 +4,29 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Page 3</title>
+    <title>Page 2</title>
     <link rel="stylesheet" href="./css/styles.css" />
+    <script type="module" src="./gallery.js" defer></script>
   </head>
   <body>
     <load
       src="./partials/header.html"
       icon-path="./img/sprite.svg#logo"
-      highlight-curr="active"
+      highlight-act="active"
     />
 
     <main>
-      <div class="container">
-        <h1 class="main-title">
-          <span class="main-title-gradient">Welcome</span> to page 3
-        </h1>
-        <load src="./partials/back-link.html" />
+      <div class="box">
+        <div class="searchBar">
+          <input type="text" name="searchImages" id="searchImages" placeholder="Search images...">
+          <button type="submit" id="searchBtn">Search</button>
+        </div>
+
+        <div class="galleryBox">
+          <ul class="gallery">
+            
+          </ul>
+        </div>
       </div>
     </main>
 
