--- a/src/gallery.html
+++ b/src/gallery.html
@@ -22,10 +22,12 @@
           <button type="submit" id="searchBtn">Search</button>
         </div>
 
+        <div class="loaderBox">
+          <span class="loader" style="display: none;"></span>
+        </div>
+
         <div class="galleryBox">
-          <ul class="gallery">
-            
-          </ul>
+          <ul class="gallery"></ul>
         </div>
       </div>
     </main>
