--- a/src/gallery.html
+++ b/src/gallery.html
@@ -18,8 +18,10 @@
     <main>
       <div class="box">
         <div class="searchBar">
+          <form class="searchForm">  
           <input type="text" name="searchImages" id="searchImages" placeholder="Search images...">
           <button type="submit" id="searchBtn">Search</button>
+          </form>
         </div>
 
         <div class="loaderBox">
@@ -28,6 +30,10 @@
 
         <div class="galleryBox">
           <ul class="gallery"></ul>
+          <button class="loadMore" style="display: none;">Load more</button>
+          <div class="loaderBox">
+            <span class="loader" style="display: none;" id="secondLoader"></span>
+          </div>
         </div>
       </div>
     </main>
